--- a/app/templates/items_detail.html
+++ b/app/templates/items_detail.html
@@ -1204,7 +1204,10 @@
 
             <span class="per">per day</span>
           </div>
-          <a class="air-cta" href="/bookings/new?item_id={{ item.id }}">Book now</a>
+<a class="air-cta"
+   href="/bookings/new?item_id={{ item.id }}&disp_cur={{ display_currency }}">
+  Book now
+</a>
         </div>
       </div>
       <div class="air-underlay" id="airUnder"></div>
