--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -797,8 +797,9 @@
       {% if display_currency is string %}
   {% set _cur = display_currency %}
 {% else %}
-  {% set _cur = _display_currency(request) %}
+  {% set _cur = display_currency(request) %}
 {% endif %}
+
 
         <!-- Messages -->
         <a href="/messages" class="btn btn-ghost btn-sm" title="Messages">
