--- a/app/templates/booking_flow.html
+++ b/app/templates/booking_flow.html
@@ -724,6 +724,17 @@
         {# NEW: نفس عملة العرض المستخدمة في كل الموقع #}
         {% set disp_cur = display_currency(request) %}
         {% set currency = (disp_cur or (CURRENCY or 'CAD'))|upper %}
+        {% if disp_rent is not defined or disp_dep is not defined %}
+    {% set native_cur = booking.currency_native or booking.currency or 'CAD' %}
+    {% set fx = fx_rate(native_cur, currency) %}
+
+    {% set base_rent = (booking.total_amount or rent_amount or 0.0)|float %}
+    {% set base_dep  = (booking.hold_deposit_amount or booking.deposit_amount or 0.0)|float %}
+
+    {% set disp_rent = (base_rent * (fx or 1.0))|round(2) %}
+    {% set disp_dep  = (base_dep  * (fx or 1.0))|round(2) %}
+{% endif %}
+
 
         <div class="d-flex justify-content-between">
           <span>Payment method</span>
