--- a/app/templates/booking_flow.html
+++ b/app/templates/booking_flow.html
@@ -313,7 +313,7 @@
         <div>
           <div class="title">{{ item.title }}</div>
 
-{% set disp_cur = display_currency(request) %}
+{% set disp_cur = disp_cur %}
 {% set currency = (disp_cur or 'CAD')|upper %}
 {% set native_cur = item.currency or 'CAD' %}
 {% set fx = fx_rate(native_cur, currency) %}
@@ -494,7 +494,7 @@
     <h6 class="mb-2">Order summary</h6>
 
     {# 1) نفس عملة العرض للموقع كله #}
-    {% set disp_cur = display_currency(request) %}
+{% set disp_cur = disp_cur %}
     {% set currency = (disp_cur or 'CAD')|upper %}
     {% set native_cur = booking.currency_native or booking.currency or 'CAD' %}
     {% set fx = fx_rate(native_cur, currency) %}
@@ -753,8 +753,7 @@
         <h6 class="mb-2">Payment summary</h6>
 
         {# NEW: نفس عملة العرض المستخدمة في كل الموقع #}
-        {% set disp_cur = display_currency(request) %}
-        {% set disp_cur = display_currency(request) %}
+{% set disp_cur = disp_cur %}
         {% set currency = (disp_cur or 'CAD')|upper %}
 
     {% set native_cur = booking.currency_native or booking.currency or 'CAD' %}
@@ -857,7 +856,7 @@
     <div>
       <div class="fw-bold">{{ item.title }}</div>
       <div class="k">{{ category_label(item.category) }}</div>
-      {% set disp_cur = display_currency(request) %}
+{% set disp_cur = disp_cur %}
       {% set currency = (disp_cur or "CAD")|upper %}
 
       {% set native_cur = item.currency or booking.currency_native or "CAD" %}
