--- a/app/templates/booking_flow.html
+++ b/app/templates/booking_flow.html
@@ -558,7 +558,7 @@
       <hr class="my-2">
       <div class="d-flex justify-content-between">
         <span>Total (before tax)</span>
-        <strong>{{ "%.2f"|format(disp_sub_before_tax) }} {{ currency }}</strong>
+        <strong>{{ "%.2f"|format(disp_grand) }} {{ currency }}</strong>
       </div>
     {% endif %}
 
