--- a/app/templates/booking_flow.html
+++ b/app/templates/booking_flow.html
@@ -1302,15 +1302,14 @@
   }
 
   // لو Stripe رجع بـ deposit_ok=1 → بدّل الزر فورًا
-  if (params.has("deposit_ok")) {
+  if (params.has("all_ok")) {
+    // نفس النتيجة: الإيجار + الديبو مدفوعين
+    markRentAuthorizedUI();
     markDepositHeldUI();
-
-    // 🔥 انتقال تلقائي للمرحلة التالية بعد دفع الديبو
     setTimeout(function(){
         window.location.assign("/bookings/flow/{{ booking.id }}/next");
     }, 600);
-}
-
+} 
 })();
 </script>
 
