--- a/app/templates/booking_flow.html
+++ b/app/templates/booking_flow.html
@@ -1249,8 +1249,13 @@
   <div class="k small d-sm-none mt-2 d-flex align-items-center justify-content-between px-3">
     <span class="num-ltr" id="pickupCount">0/6</span>
     <div class="progress-dots">
-      <span class="dot" id="p1m"></span><span class="dot" id="p2m"></span><span class="dot" id="p3m"></span>
-      <span class="dot" id="p4m"></span><span class="dot" id="p5m"></span><span class="dot" id="p6m"></span>
+      <span class="dot" id="p1"></span>
+<span class="dot" id="p2"></span>
+<span class="dot" id="p3"></span>
+<span class="dot" id="p4"></span>
+<span class="dot" id="p5"></span>
+<span class="dot" id="p6"></span>
+
     </div>
     <span id="pickupStatusMobile" class="msg"></span>
   </div>
