--- a/app/templates/thread.html
+++ b/app/templates/thread.html
@@ -179,7 +179,7 @@
         <div class="chat-header-name">
             {{ other.first_name }} {{ other.last_name }}
             {% if other.is_verified %}
-                <img src="/static/verified.png" class="chat-header-verified">
+                <img src="/static/img/violet.png" class="chat-header-verified">
             {% endif %}
         </div>
     </div>
