--- a/app/templates/inbox.html
+++ b/app/templates/inbox.html
@@ -49,7 +49,7 @@
           <div class="d-flex align-items-center gap-2">
             <strong class="fs-6">{{ t.other_fullname }}</strong>
             {% if t.other_verified %}
-              <img src="/static/img/.png" alt="verified" style="height:16px">
+              <img src="/static/img/violet.png" alt="verified" style="height:16px">
             {% endif %}
             {% set c = t.unread_count|int %}
             {% if c > 0 %}
